--- a/src/styles/loginForm.scss
+++ b/src/styles/loginForm.scss
@@ -19,14 +19,14 @@
     width: 20rem;
 }
 
-.log_in_text {
+.login_form_text {
     @include text-xl ();
 
     font-weight: 700;
     color: $gray-700;
 }
 
-.incorrect_input {
+.login_form_incorrect_input {
     @include text-lg ();
     
     padding-top: 0.5rem;
@@ -45,11 +45,11 @@
     border-top-right-radius: 0.5rem;
 }
 
-.incorrect_input:hover {
+.login_form_incorrect_input:hover {
     background-color: $red-200;
 }
 
-.incorrect_input:focus {
+.login_form_incorrect_input:focus {
     outline: 2px solid transparent;
     outline-offset: 2px;
     background-color: $red-200;
@@ -59,7 +59,7 @@
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);   
 }
 
-.correct_input {
+.login_form_correct_input {
     @include text-lg ();
 
     padding-top: 0.5rem;
@@ -78,11 +78,11 @@
     border-top-right-radius: 0.5rem;
 }
 
-.correct_input:hover {
+.login_form_correct_input:hover {
     background-color: $gray-300;
 }
 
-.correct_input:focus {
+.login_form_correct_input:focus {
     outline: 2px solid transparent;
     outline-offset: 2px;
     background-color: $gray-300;
@@ -92,7 +92,7 @@
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);   
 }
 
-.login_button {
+.login_form_submit_button {
     @include text-lg ();
 
     padding-top: 0.5rem;
@@ -114,7 +114,7 @@
     --tw-shadow: var(--tw-shadow-colored);
 }
 
-.login_button:hover {
+.login_form_submit_button:hover {
     cursor: pointer;
 
     --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
@@ -124,18 +124,18 @@
     --tw-shadow: var(--tw-shadow-colored);
 }
 
-.login_button:disabled {
+.login_form_submit_button:disabled {
     --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
     --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.login_button:disabled:hover {
+.login_form_submit_button:disabled:hover {
     --tw-shadow-color: #a21caf;
     --tw-shadow: var(--tw-shadow-colored);
 }
 
-.register_option_button {
+.login_form_register_option_button {
     @include text-lg ();
 
     color: $gray-600;
@@ -146,6 +146,6 @@
     margin-bottom: 0px;
 }
 
-.register_option_button:hover {
+.login_form_register_option_button:hover {
     color: $gray-500;
 }
