--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,35 +1,119 @@
-@import "colors.scss";
-@import "fonts.scss";
+@use "presets/presets.scss";
 
 .navbar {
+    @include presets.flex-row-center();
     min-width: 100%;
-    display: flex;
-    align-items: center;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    justify-content: flex-start;
+    padding: 1rem 0;
     border-style: solid;
     border-width: 0px;
     border-bottom-width: 1px;
-    border-color: $gray-200;
+    border-color: presets.$gray-200;
     margin-bottom: 1rem;
-    background-color: $gray-100;
+    background-color: presets.$gray-100;
 }
 
-.logoButton {
-    margin-bottom: 0px;
-    padding: 0px;
-    border-width: 0px;
-    background-color: $gray-100;
-    border-radius: 0.75rem;
-}
-
-.logoButton:hover {
-    background-color: $gray-200;
-    cursor: pointer;
+.logo {
+    width: 3.5rem;
+    margin: 0 0.75rem;
 }
 
 .navbar_button {
+    margin: 0 0.5rem;
+    padding: 0 1rem;
+    background-color: presets.$gray-100;
+    color: presets.$gray-500;
+    border-radius: 0.75rem;
+    font-size: large;
+    font-weight: bold;
+
+    &:hover {
+        background-color: presets.$gray-200;
+        cursor: pointer;
+        color: presets.$fuchsia-700;
+    }
+}
+
+.navbar_logoButton {
+    @extend .navbar_button;
+    margin-left: 0.75rem;
     margin-right: 0.25rem;
+    margin-bottom: 0;
+    padding: 0px;
+
+    &:hover {
+        background-color: presets.$gray-200;
+        cursor: pointer;
+    }
+}
+
+.navbar_avatarButton {
+    @extend .navbar_button;
+    margin-right: 1rem;
     margin-left: 0.25rem;
+    padding: 0;
+
+    &:hover {
+        background-color: presets.$gray-100;
+    }
+}
+
+@mixin _navbar_button_sign {
+    background-color: presets.$gray-100;
+    border: 2px solid;
+    border-radius: 1rem;
+    font-size: small;
+
+    & p {
+        padding: 0 0.625rem;
+        margin: 0.25rem 0;
+        font-weight: bold;
+    }
+
+    &:hover {
+        cursor: pointer;
+
+        & p {
+            text-decoration: underline;
+            text-underline-offset: 2px;
+        }
+    }
+    
+}
+
+.navbar_button_signUp {
+    @include _navbar_button_sign();
+    border-color: presets.$fuchsia-700;
+    margin-right: 0.5rem;
+
+    & p {
+        color: presets.$fuchsia-700;
+    }
+
+    &:hover {
+        background-color: presets.$fuchsia-100;
+        border-color: presets.$fuchsia-900;
+
+        & p {
+            color: presets.$fuchsia-900;
+        }
+    }
+}
+
+.navbar_button_signIn {
+    @include _navbar_button_sign();
+    border-color: presets.$gray-400;
+    margin-right: 1rem;
+
+    & p {
+        color: presets.$gray-600;
+    }
+
+    &:hover {
+        background-color: presets.$gray-200;
+        border-color: presets.$gray-800;
+
+        & p {
+            color: black;
+        } 
+    }
 }
