--- a/src/styles/presets/colors.scss
+++ b/src/styles/presets/colors.scss
@@ -3,12 +3,18 @@ $white: rgb(255 255 255);
 $gray-100: rgb(243 244 246);
 $gray-200: rgb(229 231 235);
 $gray-300: rgb(209 213 219);
+$gray-400: rgb(156 163 175);
 $gray-500: rgb(107 114 128);
 $gray-600: rgb(75 85 99);
 $gray-700: rgb(55 65 81);
+$gray-800: rgb(31 41 55);
 
 $red-200: rgb(251 213 213);
 $red-300: rgb(248 180 180);
 $red-600: rgb(224 36 3);
 
+$fuchsia-100: rgb(250 232 255);
 $fuchsia-700: rgb(162 28 175);
+$fuchsia-900: rgb(112 26 117);
+
+$purple-200: #e9d5ff;
