--- a/src/styles/loginPage.scss
+++ b/src/styles/loginPage.scss
@@ -1,8 +1,193 @@
-@use "presets/presets.scss" as presets;
+@use "presets/presets.scss"as presets;
 
 .login {
-    @include presets.flex-col-center();
     height: 100vh;
     width: 100vw;
+    max-width: 100vw;
+    margin: 0;
     background-color: presets.$gray-100;
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.login_container {
+    @include presets.flex-row-center();
+
+    @media (orientation: landscape) {
+        background-color: presets.$gray-200;
+        margin: auto;
+        overflow: hidden;
+        border-collapse: separate;
+        border-radius: 1.5rem;
+
+        @supports (-webkit-touch-callout: none) {
+            min-height: 0;
+            height: 70%;
+        }
+
+        @supports not (-webkit-touch-callout: none) {
+            height: calc(80vw * 9 / 16);
+            max-height: calc(min(90vh, 1080px));
+            width: calc(min(80vw, 80vh * 16 / 9));
+            max-width: 1920px;
+            min-width: 24rem;
+            min-height: 26rem;
+        }
+    }
+
+    @media (orientation: portrait) {
+        // @include presets.flex-col-center;
+        transition: height 1s, width 1s;
+        -webkit-transition: height 1s, width 1s;
+        transition-delay: 1s;
+        width: 90%;
+        height: 80%;
+        overflow: hidden;
+        border-collapse: separate;
+        border-radius: 1.5rem;
+        margin: auto;
+        margin-bottom: 4rem;
+        margin-top: 4rem;
+
+    }
+}
+
+.login_pic {
+    transition: height 1s, width 1s;
+    -webkit-transition: height 1s, width 1s;
+    object-fit: cover;
+    height: 100%;
+    width: 60%;
+    border-radius: 1.5rem;
+
+    @media (orientation: portrait) {
+        width: 0;
+        height: 0;
+        flex-grow: 0;
+    }
+
+    background-color: #2a1b3d;
+}
+
+.login_form {
+    @include presets.flex-col-center();
+    transition: height 1s;
+    -webkit-transition: height 1s;
+    transition-delay: 1s;
+    transition: width 1s;
+    -webkit-transition: width 1s;
+    background-color: presets.$gray-200;
+    border-radius: 1.5rem;
+
+    @media (orientation: landscape) {
+        width: 40%;
+        min-width: 26rem;
+        min-height: 100%;
+    }
+
+    @media (orientation: portrait) {
+        width: 100%;
+    }
+
+    height: 100%;
+}
+
+
+.login_form_text {
+    font-weight: bold;
+    font-size: large;
+    color: presets.$gray-700;
+}
+
+@mixin _login_form_input {
+    width: 80%;
+    padding: 0.5rem 1rem;
+    margin: 0.25rem 0;
+    font-size: medium;
+    border-bottom-width: 1px;
+    border-radius: 1rem;
+    color: presets.$gray-500;
+
+    &:focus {
+        @include presets.shadow();
+        outline: 2px solid transparent;
+        outline-offset: 2px;
+    }
+
+    &::placeholder {
+        font-size: medium;
+        font-style: italic;
+        font-weight: 500;
+        opacity: 0.5;
+    }
+}
+
+.login_form_incorrect_input {
+    @include _login_form_input();
+    background-color: presets.$red-300;
+    border-color: presets.$red-600;
+
+    &:hover {
+        background-color: presets.$red-200;
+    }
+
+    &:focus {
+        background-color: presets.$red-200;
+    }
+}
+
+.login_form_correct_input {
+    @include _login_form_input();
+    background-color: presets.$gray-200;
+    border-color: presets.$gray-700;
+
+    &:hover {
+        background-color: presets.$gray-300;
+    }
+
+    &:focus {
+        background-color: presets.$gray-300;
+    }
+}
+
+.login_form_submit_button {
+    @include presets.shadow($color: #a21caf);
+    width: 30%;
+    padding: 0.5rem 0;
+    margin-bottom: 0.25rem;
+    margin-top: 2.25rem;
+    font-size: larger;
+    border-radius: 9999px;
+    color: white;
+    background-color: presets.$fuchsia-700;
+
+    &:hover {
+        @include presets.shadow-md($color: #a21caf);
+        cursor: pointer;
+    }
+
+    &:disabled {
+        @include presets.shadow();
+
+        &:hover {
+            @include presets.shadow(#a21caf);
+        }
+    }
+}
+
+.login_form_register_option_button {
+    margin-bottom: 0.25rem;
+    background-color: presets.$gray-200;
+    text-decoration: underline;
+
+    &:hover {
+        color: presets.$gray-500;
+        cursor: pointer;
+    }
+}
+
+.login_form_register_option_text {
+    color: presets.$gray-600;
+    font-size: medium;
+    padding: 0rem;
 }
