--- a/src/styles/loginPage.scss
+++ b/src/styles/loginPage.scss
@@ -6,8 +6,8 @@
     max-width: 100vw;
     margin: 0;
     background-color: presets.$gray-100;
-    display: table-cell;
-    vertical-align: middle;
+    display: flex;
+  justify-content: center;
 }
 
 .login_container {
@@ -46,8 +46,6 @@
         border-collapse: separate;
         border-radius: 1.5rem;
         margin: auto;
-        margin-bottom: 4rem;
-        margin-top: 4rem;
 
     }
 }
