--- a/src/styles/presets/colors.scss
+++ b/src/styles/presets/colors.scss
@@ -9,11 +9,15 @@ $gray-600: rgb(75 85 99);
 $gray-700: rgb(55 65 81);
 $gray-800: rgb(31 41 55);
 
+$red-100: rgb(253 232 232);
 $red-200: rgb(251 213 213);
 $red-300: rgb(248 180 180);
+$red-400: rgb(249 128 128);
+$red-500: rgb(240 82 82);
 $red-600: rgb(224 36 3);
 
 $fuchsia-100: rgb(250 232 255);
+$fuchsia-400: rgb(232 121 249);
 $fuchsia-700: rgb(162 28 175);
 $fuchsia-900: rgb(112 26 117);
 
