--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -20,7 +20,7 @@
     border-radius: 0.75rem;
     font-size: large;
     font-weight: bold;
-
+    padding: 1rem 1rem;
     &:hover {
         background-color: presets.$gray-200;
         cursor: pointer;
@@ -28,13 +28,16 @@
     }
 }
 
+.navbar_logo {
+    width: 3.5rem;
+}
+
 .navbar_logoButton {
     @extend .navbar_button;
     margin-left: 0.75rem;
     margin-right: 0.25rem;
     margin-bottom: 0;
-    padding: 0px;
-    width: 3.5rem;
+    padding: 0 0.5rem;
     margin: 0 0.75rem;
     &:hover {
         background-color: presets.$gray-200;
