--- a/styles/loginPage.scss
+++ b/styles/loginPage.scss
@@ -66,7 +66,7 @@
     background-color: #2a1b3d;
 }
 
-.login_form {
+.form {
     @include presets.flex-col-center();
     transition: height 1s;
     -webkit-transition: height 1s;
@@ -90,7 +90,7 @@
 }
 
 
-.login_form_text {
+.form_text {
     font-weight: bold;
     font-size: large;
     color: presets.$gray-700;
@@ -119,7 +119,7 @@
     }
 }
 
-.login_form_incorrect_input {
+.form_incorrect_input {
     @include _login_form_input();
     background-color: presets.$red-300;
     border-color: presets.$red-600;
@@ -133,7 +133,7 @@
     }
 }
 
-.login_form_correct_input {
+.form_correct_input {
     @include _login_form_input();
     background-color: presets.$gray-200;
     border-color: presets.$gray-700;
@@ -147,7 +147,7 @@
     }
 }
 
-.login_form_submit_button {
+.form_submit_button {
     @include presets.shadow($color: #a21caf);
     width: 30%;
     padding: 0.5rem 0;
@@ -172,7 +172,7 @@
     }
 }
 
-.login_form_register_option_button {
+.form_register_option_button {
     margin-bottom: 0.25rem;
     background-color: presets.$gray-200;
     text-decoration: underline;
@@ -183,7 +183,7 @@
     }
 }
 
-.login_form_register_option_text {
+.form_register_option_text {
     color: presets.$gray-600;
     font-size: medium;
     padding: 0rem;
