--- a/styles/presets/colors.scss
+++ b/styles/presets/colors.scss
@@ -1,9 +1,7 @@
-$white: rgb(255 255 255);
-
 $gray-100: rgb(243 244 246);
 $gray-200: rgb(229 231 235);
 $gray-300: rgb(209 213 219);
-$gray-400: rgb(156 163 175);
+$gray-400: rgb(189, 197, 202);
 $gray-500: rgb(107 114 128);
 $gray-600: rgb(75 85 99);
 $gray-700: rgb(55 65 81);
