--- a/styles/loginPage.scss
+++ b/styles/loginPage.scss
@@ -27,8 +27,8 @@
         @supports not (-webkit-touch-callout: none) {
             height: calc(70vw * 9 / 16);
             max-height: calc(min(80vh, 1080px));
-            width: calc(min(70vw, 70vh * 16 / 9));
-            max-width: 1920px;
+            width: 70vw;
+            max-width: calc(min(80vh * 16 / 9, 1920px));
             min-width: 24rem;
             min-height: 26rem;
         }
@@ -50,6 +50,10 @@
 }
 
 .login_pic {
+    width: 100%;
+    height: 100%;
+}
+.login_wrapper {
     transition: height 1s, width 1s;
     -webkit-transition: height 1s, width 1s;
     object-fit: cover;
@@ -75,6 +79,7 @@
     background-color: presets.$gray-200;
     border-radius: 1.5rem;
     align-self: stretch;
+
     @media (orientation: landscape) {
         width: 40%;
         min-width: 26rem;
@@ -87,7 +92,6 @@
 
     height: 100%;
 }
-
 
 .form_text {
     font-weight: bold;
@@ -153,7 +157,7 @@
     max-width: 10rem;
     padding: 0.3rem 1rem;
     margin-bottom: 0.25rem;
-    margin-top: 1rem ;
+    margin-top: 1rem;
     font-size: larger;
     border-radius: 9999px;
     color: white;
@@ -165,11 +169,12 @@
     }
 
     &:disabled {
+
         background-color: presets.$gray-500;
-        @include presets.shadow();
+        @include presets.shadow-md();
 
         &:hover {
-            @include presets.shadow(#a21caf);
+            cursor: default;
         }
     }
 }
@@ -180,6 +185,7 @@
     margin-bottom: 0.25rem;
     background-color: presets.$gray-200;
     text-decoration: underline;
+
     &:hover {
         color: presets.$gray-500;
         cursor: pointer;
