--- a/styles/presets/colors.scss
+++ b/styles/presets/colors.scss
@@ -20,3 +20,10 @@ $fuchsia-700: rgb(162 28 175);
 $fuchsia-900: rgb(112 26 117);
 
 $purple-200: #e9d5ff;
+
+$dark-blue : #5680E9;
+$light-blue: #84ceeb;
+$mid-blue: #5ab9ea;
+$light-purple: #c2c8e4;
+$purple: #8860d0;
+$incorrect-input: #ec98ab;
