--- a/styles/loginPage.scss
+++ b/styles/loginPage.scss
@@ -53,6 +53,7 @@
     width: 100%;
     height: 100%;
 }
+
 .login_wrapper {
     transition: height 1s, width 1s;
     -webkit-transition: height 1s, width 1s;
@@ -99,7 +100,7 @@
     color: presets.$gray-700;
 }
 
-@mixin _login_form_input {
+.form_input {
     width: 80%;
     padding: 0.5rem 1rem;
     margin: 0.25rem 0;
@@ -108,36 +109,13 @@
     border-radius: 1rem;
     color: presets.$gray-500;
 
-    &:focus {
-        @include presets.shadow();
-        outline: 2px solid transparent;
-        outline-offset: 2px;
-    }
-
     &::placeholder {
         font-size: medium;
         font-style: italic;
         font-weight: 500;
         opacity: 0.5;
     }
-}
 
-.form_incorrect_input {
-    @include _login_form_input();
-    background-color: presets.$incorrect-input;
-    border-color: presets.$red-600;
-
-    &:hover {
-        background-color: presets.$red-200;
-    }
-
-    &:focus {
-        background-color: presets.$red-200;
-    }
-}
-
-.form_correct_input {
-    @include _login_form_input();
     background-color: presets.$gray-300;
     border-color: presets.$gray-700;
 
@@ -146,7 +124,23 @@
     }
 
     &:focus {
+        @include presets.shadow();
+        outline: 2px solid transparent;
+        outline-offset: 2px;
         background-color: presets.$gray-300;
+    }
+
+    &.incorrect {
+        background-color: presets.$incorrect-input;
+        border-color: presets.$red-600;
+
+        &:hover {
+            background-color: presets.$red-200;
+        }
+
+        &:focus {
+            background-color: presets.$red-200;
+        }
     }
 }
 
