--- a/styles/presets/colors.scss
+++ b/styles/presets/colors.scss
@@ -24,6 +24,7 @@ $purple-200: #e9d5ff;
 $dark-blue : #5680E9;
 $light-blue: #84ceeb;
 $mid-blue: #5ab9ea;
+$ultralight-purple: #dee2f7;
 $light-purple: #c2c8e4;
 $purple: #8860d0;
 $incorrect-input: #ec98ab;
