--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -11,20 +11,20 @@
     margin-bottom: 1rem;
     background-color: presets.$gray-100;
 
-    @media (orientation: portrait) {
-        min-width: 0;
-        height: 0;
-        width: 0;
-        margin: 0;
-        padding: 0;
-        border: 0;
-        * {
-            height: 0;
-            width: 0;
-            margin: 0;
-            padding: 0;
-        }
-    }
+    // @media (orientation: portrait) {
+    //     min-width: 0;
+    //     height: 0;
+    //     width: 0;
+    //     margin: 0;
+    //     padding: 0;
+    //     border: 0;
+    //     * {
+    //         height: 0;
+    //         width: 0;
+    //         margin: 0;
+    //         padding: 0;
+    //     }
+    // }
 }
 
 .navbar_button {
