--- a/styles/feedPage.scss
+++ b/styles/feedPage.scss
@@ -9,6 +9,25 @@
     overflow: scroll;
 }
 
+.feed_wrapper {
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+}
+
+.new_post_button {
+    box-shadow: 0px 0px 20px 20px presets.$purple;
+    position: absolute;
+    bottom: 7rem;
+    left: 7rem;
+    font-size: 3rem;
+    color: white;
+    background-color: presets.$purple;
+    width: 5rem;
+    height: 5rem;
+    border-radius: 999px;
+}
+
 .feed_posts {
     @include presets.flex-col-center();
     overflow: scroll;
