--- a/styles/feedPage.scss
+++ b/styles/feedPage.scss
@@ -16,16 +16,26 @@
 }
 
 .new_post_button {
-    box-shadow: 0px 0px 20px 20px presets.$purple;
+    box-shadow: 0px 0px 15px 15px presets.$purple;
     position: absolute;
     bottom: 7rem;
     left: 7rem;
     font-size: 3rem;
     color: white;
     background-color: presets.$purple;
-    width: 5rem;
-    height: 5rem;
-    border-radius: 999px;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    transition: height 0.45s, width 0.45s, box-shadow 0.45s;
+    @media (max-width: 70rem) {
+        color: presets.$purple;
+        padding: 0;
+        min-height: 0;
+        height: 0;
+        width: 0;
+        font-size: 0;
+        box-shadow: none;
+    }
 }
 
 .feed_posts {
