--- a/styles/feedPage.scss
+++ b/styles/feedPage.scss
@@ -1,4 +1,4 @@
-@use "presets/presets.scss" as presets;
+@use "presets/presets.scss"as presets;
 
 .feed {
     @include presets.flex-col-center();
@@ -16,25 +16,48 @@
 }
 
 .new_post_button {
-    box-shadow: 0px 0px 15px 15px presets.$purple;
+    box-shadow: 0px 0px 10px presets.$purple;
     position: absolute;
-    bottom: 7rem;
-    left: 7rem;
-    font-size: 3rem;
-    color: white;
+    bottom: 3rem;
+    left: 3rem;
     background-color: presets.$purple;
     width: 4rem;
     height: 4rem;
     border-radius: 50%;
-    transition: height 0.45s, width 0.45s, box-shadow 0.45s;
+    font-size: 0;
+    transition: transform 0.45s ease 0.1s, box-shadow 0.2s ease 0s, padding 0s ease 0.2s, background-color 0.4s, color 0.4s;
+    padding: 0;
+    color: white;
+    transform: scale(1);
+
     @media (max-width: 70rem) {
         color: presets.$purple;
-        padding: 0;
+        transition: transform 0.45s ease 0.2s, box-shadow 0.1s ease 0.55s;
         min-height: 0;
-        height: 0;
-        width: 0;
-        font-size: 0;
+        // height: 0;
+        // width: 0;
+        transform: scale(0);
         box-shadow: none;
+    }
+
+    &:hover {
+        transition: background-color 0.4s, color 0.4s;
+        cursor: pointer;
+        background-color: white;
+        color: presets.$purple;
+    }
+}
+
+.new_post_icon {
+    width: 1.75rem;
+    height: auto;
+    transition: transform 0s ease 0.5s;
+    transform: scale(1);
+    @media (max-width: 70rem) {
+        transition: transform 0s ease 0.5s;
+        transform: scale(0);
+        padding: 0;
+        margin: 0;
     }
 }
 
