--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -36,6 +36,7 @@
     font-size: large;
     font-weight: bold;
     padding: 1rem 1rem;
+
     &:hover {
         background-color: presets.$gray-200;
         cursor: pointer;
@@ -45,26 +46,42 @@
 
 .createpost_button {
     @extend .navbar_button;
-    font-size: large;
     font-weight: normal;
     font-style: italic;
     color: presets.$purple;
-    margin-right: 1rem;
+    background-color: inherit;
+    margin-right: 1.5rem;
+    border-radius: 50%;
     opacity: 1;
-    transition: opacity 0.5s, visibility 0s linear 0.3s;
-    transition-delay: 0;
-    // TODO: do transition
-    @media (min-width: 70rem) {
-    transition: opacity 0.5s, visibility 0s linear 0.3s;
+    padding: 0;
+    width: 40px;
+    height: 40px;
+    visibility: visible;
+    transform: scale(1);
+    box-shadow: none;
 
-        // font-size: 0;
-        opacity: 0;
-        // visibility: hidden;
+    transition: transform 0.5s ease 0.5s, color 0.5s ease 0s, background-color 0.5s ease 0s, box-shadow 0.5s ease 0s ;
+
+    @media (min-width: 65rem) {
+        
+        transform: scale(0);
+        transition: transform 0.5s ease 0s;
     }
 
     &:hover {
-        color: presets.$mid-blue;
+        box-shadow: 0px 0px 5px presets.$purple;
+        color: white;
+        background-color: presets.$purple;
+        
     }
+
+    border: 1px solid presets.$purple;
+}
+
+.plus_button {
+    width: 1.25rem;
+    height: 1.25rem;
+    margin-top: 5px;
 }
 
 .navbar_logo {
@@ -78,6 +95,7 @@
     margin-bottom: 0;
     padding: 0 0.5rem;
     margin: 0 0.75rem;
+
     &:hover {
         cursor: pointer;
     }
@@ -114,7 +132,7 @@
             text-underline-offset: 2px;
         }
     }
-    
+
 }
 
 .navbar_button_signUp {
@@ -151,6 +169,6 @@
 
         & p {
             color: black;
-        } 
+        }
     }
 }
