logout button and server redirecting

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -27,6 +27,11 @@ form {
     margin-top: 0em;
 }
 
+button {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+
 a {
     text-decoration: inherit;
 }
