--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -27,6 +27,28 @@
     // }
 }
 
+.dropdown_profile {
+    display: none;
+    position: absolute;
+    z-index: 1;
+}
+
+.dropdown_element {
+    background-color: inherit;
+    border: 0px;
+    color: black;
+    padding: 0;
+    margin: 0;
+    font-size: medium;
+    &:hover {
+        cursor: pointer;
+    }
+}
+
+.navbar_avatarButton_wrapper:hover .dropdown_profile {
+    display: block;
+}
+
 .navbar_button {
     margin: 0 0.5rem;
     padding: 0 1rem;
