--- a/styles/presets/colors.scss
+++ b/styles/presets/colors.scss
@@ -4,8 +4,9 @@ $gray-300: rgb(209 213 219);
 $gray-400: rgb(189, 197, 202);
 $gray-500: rgb(107 114 128);
 $gray-600: rgb(75 85 99);
-$gray-700: rgb(55 65 81);
-$gray-800: rgb(31 41 55);
+$gray-700: #4E4E50;
+$gray-800: #1A1A1D;
+$gray-900: #11111A;
 
 $red-100: rgb(253 232 232);
 $red-200: rgb(251 213 213);
