--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -50,15 +50,14 @@
 }
 
 .navbar_button {
-    margin: 0 0.5rem;
-    padding: 0 1rem;
+    margin: 0 0.25rem;
     background-color: presets.$gray-800;
     // color: presets.$gray-500;
     color: #950740;
     border-radius: 0.75rem;
     font-size: large;
     font-weight: bold;
-    padding: 1rem 1rem;
+    padding: 0.5rem 1rem;
 
     &:hover {
         background-color: presets.$gray-900;
@@ -69,36 +68,10 @@
 
 .createpost_button {
     @extend .navbar_button;
-    font-weight: normal;
-    font-style: italic;
-    color: presets.$purple;
-    background-color: inherit;
-    margin-right: 1.5rem;
-    border-radius: 50%;
-    opacity: 1;
-    padding: 0;
-    width: 40px;
-    height: 40px;
-    visibility: visible;
-    transform: scale(1);
-    box-shadow: none;
-
-    transition: transform 0.5s ease 0.5s, color 0.5s ease 0s, background-color 0.5s ease 0s, box-shadow 0.5s ease 0s ;
-
-    @media (min-width: 65rem) {
-        
-        transform: scale(0);
-        transition: transform 0.5s ease 0s;
-    }
-
-    &:hover {
-        box-shadow: 0px 0px 5px presets.$purple;
-        color: white;
-        background-color: presets.$purple;
-        
-    }
-
-    border: 1px solid presets.$purple;
+    background-color: #950740;
+    color: white;
+    padding: 0.5rem;
+    margin: 0 1.5rem 0.5rem 1.5rem;
 }
 
 .plus_button {
@@ -108,7 +81,7 @@
 }
 
 .navbar_logo {
-    width: 3.5rem;
+    width: 5rem;
 }
 
 .navbar_logoButton {
@@ -117,10 +90,11 @@
     margin-right: 0.25rem;
     margin-bottom: 0;
     padding: 0 0.5rem;
-    margin: 0 0.75rem;
+    margin: 0.25rem auto 1rem auto;
 
     &:hover {
         cursor: pointer;
+        background-color: inherit;
     }
 }
 
