--- a/styles/feedPage.scss
+++ b/styles/feedPage.scss
@@ -22,14 +22,31 @@
     margin-top: 3px;
 }
 
+.feed_header {
+    @include presets.flex-row-center();
+    padding: 0;
+    font-size: xx-large;
+    font-weight: bold;
+    width: 100%;
+    height: 5rem;
+    color: wheat;
+    border-bottom: 1px solid black
+}
+
+.feed_center_wrapper {
+    @include presets.flex-col-center();
+    background-color: presets.$gray-900;
+    width: 60%;
+    height: 100vh;
+}
+
 .feed_posts {
     @include presets.flex-col-center();
     overflow: scroll;
-    width: 60%;
+    width: 100%;
     height: 100vh;
     padding: 2rem;
     border-right: 1px solid black;
-    background-color: presets.$gray-900;
 }
 
 .clip_loader {
