--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -50,7 +50,7 @@
 }
 
 .navbar_button {
-    margin: 0 0.25rem;
+    margin: 0 1.5rem;
     background-color: presets.$gray-800;
     // color: presets.$gray-500;
     color: #950740;
@@ -71,7 +71,8 @@
     background-color: #950740;
     color: white;
     padding: 0.5rem;
-    margin: 0 1.5rem 0.5rem 1.5rem;
+    margin: 3rem 1rem 0.5rem 1rem;
+    border-radius: 9999px;
 }
 
 .plus_button {
@@ -81,7 +82,7 @@
 }
 
 .navbar_logo {
-    width: 5rem;
+    width: 4rem;
 }
 
 .navbar_logoButton {
